func: add pagination git add .issue: new submit will broke the page logic

--- a/depth01/myDiary_detail.html
+++ b/depth01/myDiary_detail.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>[이하성] CSS&JS myDiary</title>
+
     <link href="./myDiary_detail.css" rel="stylesheet">
+    <link href="../asset/icon__bracket.png" rel="icon" />
+
     <script src="./myDiary_detail.js" defer> </script>
 </head>
 <body>
