refactor: 불필요한 변수 삭제 및 addEventListener를 onclick으로 변경

--- a/다이어리/diary.html
+++ b/다이어리/diary.html
@@ -44,7 +44,7 @@
                         class="dropdown_img"
                       />
                     </div>
-                    <ul class="dropdown" id="photo_filter_list">
+                    <ul class="dropdown" id="photo_filter_list" onclick="onClickPhoto(event)">
                       <li>
                         <div onclick="setDropdownLabel('기본형')">
                           기본형
@@ -86,7 +86,7 @@
                           class="dropdown_img"
                         />
                       </div>
-                      <ul class="dropdown" id="mood_list">
+                      <ul class="dropdown" id="mood_list" onclick="onClickMood(event)">
                         <li>
                           <div>
                             전체
