func: infinite scrolling for dog img

--- a/myDiary.html
+++ b/myDiary.html
@@ -144,12 +144,7 @@
                 <div class="diary__button">등록하기</div>
             </div>
 
-            <div class="body__gallery">
-                <div class="gallery__imgBox">
-                    <div class="img__skeleton"></div>
-                    <img />
-                </div>
-            </div>
+            <div class="body__gallery"> </div>
         </div>
 
         <div class="container__modal">
