style: Pretendard font

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>치영의 일기장</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" integrity="sha384-ojSuqSO0woqstXqGutMXLz4qiOs/j3OCoCqM7jQvjMepvV7ILIgoX2h6TxU+ttal" crossorigin="anonymous">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" integrity="sha384-80Gx8/ISg4/YRCM3FBSI6ZISwyv1YS06ohM5kCGY9Hz149a6RiLWj8JtqzLrevPZ" crossorigin="anonymous">
         <link rel="stylesheet" href="css/index.css">
         <script type="module" src="js/functool.js"></script>
