--- a/edit.html
+++ b/edit.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>글 수정하기</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" integrity="sha384-ojSuqSO0woqstXqGutMXLz4qiOs/j3OCoCqM7jQvjMepvV7ILIgoX2h6TxU+ttal" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/edit.css">
         <script type="module" src="js/edit.js" defer></script>
