--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <title>main</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
     <link rel="stylesheet" href="./css/index.css" />
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./css/pagination.css" />
@@ -12,13 +20,6 @@
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-    />
-
-    <link
-      rel="stylesheet"
-      as="style"
-      crossorigin
-      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css"
     />
 
     <link
@@ -142,10 +143,12 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
 
+    <script src="./js/koreaadvice.js"></script>
+    <script src="./js/pixelsImg.js"></script>
     <script src="./js/index.js"></script>
     <script src="./js/editor.js"></script>
     <script src="./js/main.js"></script>
-    <!-- <script src="./js/weather.js" type="module"></script> -->
+    <script src="./js/weather.js"></script>
     <script src="./js/pagination.js"></script>
   </body>
 </html>
