--- a/gallery.html
+++ b/gallery.html
@@ -28,6 +28,8 @@
     <div class="galleryListWrap ratio-1-1"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
+    <script src="./js/koreaadvice.js"></script>
+    <script src="./js/pixelsImg.js"></script>
     <script src="./js/index.js"></script>
     <script src="./js/gallery.js"></script>
   </body>
