--- a/나만의 일기장/myDiary.html
+++ b/나만의 일기장/myDiary.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>나만의 일기장</title>
     <link rel="stylesheet" href="./myDiary.css" />
