--- a/04-01-diary/main.html
+++ b/04-01-diary/main.html
@@ -4,7 +4,7 @@
     <title>Diary</title>
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/global.css" />
-    <link rel="stylesheet" href="./css/main.mobile.css" media="(max-width: 765px)" />
+    <link rel="stylesheet" href="./css/main.mobile.css" media="(max-width: 829px)" />
     <script src="./javascript/main.js" ></script>
 </head>
 <body>
@@ -13,10 +13,7 @@
     <div id="html_modal_group" class="modal_group">
         <div class="modal_background" onclick="JS_close()"></div>
         <div class="modal_register" id="html_modal_register">
-            <div class="register_title">일기 쓰기
-                <div class="darkmode"> 다크모드
-                    <input type="checkbox" id="darkmode" class="CSS_toggle" onclick="JS_dark(event)" />
-                </div>
+            <div class="register_title">일기 쓰기 
             </div>
                 <div class="register_contentbox">
                     <div class="register_content">오늘 기분은 어땠나요?</div>
@@ -91,6 +88,9 @@
     <div class="layout">
         <div class="header">
             <div>민지의 다이어리</div>
+            <div class="darkmode"> 다크모드
+                <input type="checkbox" id="darkmode" class="CSS_toggle" onclick="JS_dark(event)" />
+            </div>
         </div>
         <img class="banner" src="./assets/main.png" alt="Banner">
 
@@ -106,7 +106,7 @@
                     <ul class="dropdown_menu">
                         <li><input type="radio" name="feeling" id="all" value="전체" checked onclick="JS_dropdown(event)" />
                             <label for="all">전체
-                                <img src="./assets/check_outline_light_xs.png" />
+                                <img src="./assets/check_outline_light_xs.png" class="label_img" />
                             </label>
                         </li>
                         <li><input type="radio" name="feeling" id="happy" value="행복해요" onclick="JS_dropdown(event)" />
