feat: added keyinput search

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <section class="diary-view">
                 <div class="bar tab-view selection-tabview">
-                    <select id="dropdownEmotionFilter">
+                    <select id="dropdownEmotionFilter">d
                         <option>전체</option>
                         <option>행복해요</option>
                         <option>슬퍼요</option>
