feat: 전체 페이지에 다크모드 적용

--- a/다이어리/diary-detail.html
+++ b/다이어리/diary-detail.html
@@ -19,6 +19,13 @@
               <div class="logo">일기 상세</div>
             </a>
           </div>
+          <div class="dark_mode_box">
+            <input
+              type="checkbox"
+              class="dark_mode_toggle"
+              onclick="darkModeToggle(event)"
+            />
+          </div>
         </div>
         <div class="main" id="main">
           <div class="main_frame" id="main_frame"></div>
@@ -79,4 +86,5 @@
   <script src="./utils/upScroll.js"></script>
   <script src="./utils/onTriggerModal.js"></script>
   <script src="./utils/onCloseSingleModal.js"></script>
+  <script src="./utils//darkModeToggle.js"></script>
 </html>
