--- a/다이어리/diary-edit.html
+++ b/다이어리/diary-edit.html
@@ -19,6 +19,13 @@
               <div class="logo">일기 수정</div>
             </a>
           </div>
+          <div class="dark_mode_box">
+            <input
+              type="checkbox"
+              class="dark_mode_toggle"
+              onclick="darkModeToggle(event)"
+            />
+          </div>
         </div>
         <div class="main" id="main">
           <div class="main_frame" id="main_frame">
@@ -122,4 +129,5 @@
     </div>
   </body>
   <script src="./diary-edit.js"></script>
+  <script src="./utils//darkModeToggle.js"></script>
 </html>
