--- a/다이어리/diary.html
+++ b/다이어리/diary.html
@@ -15,6 +15,13 @@
         <div class="layoutWrapper">
           <div class="header">
             <div class="logo">예슬이의 다이어리</div>
+            <div class="dark_mode_box">
+              <input
+                type="checkbox"
+                class="dark_mode_toggle"
+                onclick="darkModeToggle(event)"
+              />
+            </div>
           </div>
           <div class="header_img_layout">
             <div class="header_img"></div>
@@ -383,4 +390,5 @@
   <script src="./utils/upScroll.js"></script>
   <script src="./utils/onTriggerModal.js"></script>
   <script src="./utils/onCloseSingleModal.js"></script>
+  <script src="./utils//darkModeToggle.js"></script>
 </html>
