[240916] 일기등록 인풋검증 추가, 전체적인 css 수정

--- a/homework/section10/detail.html
+++ b/homework/section10/detail.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>상세페이지</title>
+  <title>다이어리📔</title>
   <link rel="stylesheet" href="./css/detail.css" />
   <script src="./js/detail.js"></script>
 </head>
@@ -12,6 +12,7 @@
 <body>
   <div class="레이아웃">
     <div class="헤더">
+      <a href="./index.html"><img src="./images/뒤로가기버튼.png"></img></a>
       <div>민서의 다이어리</div>
     </div>
     <div class="메인">
