--- a/04-01-diary/detail.html
+++ b/04-01-diary/detail.html
@@ -3,6 +3,7 @@
 <head>
     <title>Detail</title>
     <link rel="stylesheet" href="./css/detail.css">
+    <link rel="stylesheet" href="./css/global.css" />
     <link rel="stylesheet" href="./css/detail.mobile.css" media="(max-width: 765px)" />
     <script src="./javascript/detail.js"></script>
     </head>
@@ -15,6 +16,9 @@
             <div class="mobile">
                 <img class="backbutton" src="./assets/back.png" onclick="JS_back()" />
                 <div class="title">일기 상세</div>
+            </div>
+            <div class="darkmode"> 다크모드
+                <input type="checkbox" id="darkmode" class="CSS_toggle" onclick="JS_dark(event)" />
             </div>
         </div>
 
@@ -58,7 +62,7 @@
                     <input class="comment_regist" type="text" id="type_comment" placeholder="회고를 남겨보세요.">
                     <button class="comment_button" onclick="JS_regist()">입력</button>
                 </div>
-                <div id="show_comment"></div>
+                <div id="show_comment" class="show_comment_css"><br /><br /><br />등록된 회고가 없습니다.</div>
         </div>
 
         <button class="up_scroll" id="floating_button">
@@ -67,6 +71,12 @@
 
         <div id="toast_message">
             <div class="toast">내용이 복사되었습니다.</div>
+        </div>
+
+        <div class="footer_layout" id="footer_section">
+            <div class="footer_title">민지의 다이어리</div>
+            <div class="footer_boss">대표 : {name}</div>
+            <div class="footer_co">Copyright © 2024.{name} Co., Ltd.</div>
         </div>
     </body>
 </html>
