--- a/04-01-diary/edit.html
+++ b/04-01-diary/edit.html
@@ -3,6 +3,7 @@
 <head>
     <title>Edit</title>
     <link rel="stylesheet" href="./css/edit.css">
+    <link rel="stylesheet" href="./css/global.css" />
     <link rel="stylesheet" href="./css/edit.mobile.css" media="(max-width: 765px)" />
 </head>
 <body>
@@ -13,6 +14,9 @@
         <div class="mobile">
             <img class="backbutton" src="./assets/back.png" onclick="JS_back()" />
             <div class="title">일기 수정</div>
+        </div>
+        <div class="darkmode"> 다크모드
+            <input type="checkbox" id="darkmode" class="CSS_toggle" onclick="JS_dark(event)" />
         </div>
     </div>
 
