--- a/04-01-diary/main2.html
+++ b/04-01-diary/main2.html
@@ -3,6 +3,7 @@
 <head>
     <title>Diary</title>
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/global.css" />
     <link rel="stylesheet" href="./css/main.mobile.css" media="(max-width: 765px)" />
     <script src="./javascript/main2.js" ></script>
 </head>
@@ -12,6 +13,9 @@
     <div class="layout">
         <div class="header">
             <div>민지의 다이어리</div>
+            <div class="darkmode"> 다크모드
+                <input type="checkbox" id="darkmode" class="CSS_toggle" onclick="JS_dark(event)" />
+            </div>
         </div>
         <img class="banner" src="./assets/main.png" alt="Banner">
 
