[240919]김세연 DAY16 과제제출

--- a/homework/html/diaryDetail.html
+++ b/homework/html/diaryDetail.html
@@ -51,8 +51,8 @@
           <div class="comment-area">
             <h2>회고</h2>
             <div class="input-area">
-              <input type="text" placeholder="회고를 남겨보세요." />
-              <button onclick="addComment()">입력</button>
+              <input id="edit-input-id" type="text" placeholder="회고를 남겨보세요." />
+              <button id="add-comment-id" onclick="addComment()">입력</button>
             </div>
             <div class="comment"></div>
           </div>
