--- a/02-main_camp/index.html
+++ b/02-main_camp/index.html
@@ -15,7 +15,7 @@
     <script type="text/babel">
         const root = ReactDOM.createRoot(document.getElementById("root"));
         root.render(
-            <PostEditor />
+            <CreatePostPage />
         );
     </script>
 </head>
